# vscode_vcpkg_template

./: CMakeLists.txt  Makefile  README.md  main.cpp  vcpkg.json
